Potential overflow fix

--- a/src/Components/Menu/menu.css
+++ b/src/Components/Menu/menu.css
@@ -92,6 +92,7 @@
   width: 100%;
   justify-content: space-between;
   margin-bottom: 1rem;
+  margin-right: 1.5rem;
 }
 .options {
   display: flex;
